--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-numpy
-pandas
-yfinance
-websockets
-qiskit
-qiskit-aer
-qiskit-optimization
-qiskit-algorithms
+numpy==1.26.4
+pandas==2.2.2
+yfinance==0.2.40
+websockets==11.0.3
+
+qiskit==0.44.2
+qiskit-aer==0.12.2
+qiskit-optimization==0.6.0
+qiskit-algorithms==0.2.1
